# diving_timer_web

./: .env.example  .gitignore  README.md  docker-compose.prod.yaml  docker-compose.yaml  dockerfile  index.html  pyproject.toml  requirements.txt  script.js  styles.css
diving_timer/: manage.py  settings.py  urls.py
diving_timer/diving_timer/: asgi.py  settings.py  urls.py  wsgi.py
diving_timer/timer/: apps.py  urls.py  views.py
diving_timer/timer/static/js/: exercise.js
diving_timer/timer/templates/timer/: exercise.html  exercise_statistics.html  index.html
timer/: urls.py  views.py
timer/static/css/: styles.css
timer/templates/: base.html
timer/templates/timer/: exercise.html  exercise_prep.html  index.html
