[build-system]
requires = ["setuptools", "wheel"]

[project]
name = "your-project-name"
version = "0.1.0"
description = """
Description
"""
readme = "README.md"

authors = [
    {name = "Dmitry Isarenko", email = "isarenko.dmitry.it@gmail.com"},
]
maintainers = [
    {name = "Dmitry Isarenko", email = "isarenko.dmitry.it@gmail.com"},
]

requires-python = ">=3.12"
dependencies = [
  "asgiref==3.10.0",
  "Django==5.0.6",
  "dotenv==0.9.9",
  "pathspec==0.12.1",
  "psycopg==3.2.12",
  "python-dotenv==1.2.1",
  "sqlparse==0.5.3",
  "tzdata==2025.2",
]
[project.optional-dependencies]
dev = [
  "typing_extensions==4.15.0",
  "mypy_extensions==1.1.0",
  "ruff==0.14.4",
  "pytest>=7.0.0",
]

[project.urls]
Homepage = "https://github.com/yourname/your-project"
Repository = "https://github.com/yourname/your-project"

[tool.ruff]
# Поддержка версии Python
target-version = "py312"
# Форматирование
indent-style = "space"
indent-width = 4
line-length = 120
quote-style = "single"

# Линтинг
select = [
  "E", # pycodestyle errors
  "W", # pycodestyle warnings
  "F", # pyflakes
  "I", # isort
  "B", # flake8-bugbear
  "C4", # flake8-comprehensions
  "UP", # pyupgrade
  "YTT", # flake8-2020
  "ANN", # flake8-annotations - типизация
  "D", # pydocstyle - докстринги
]

# Автофикс
fix = true
fixable = ["ALL"]
unfixable = ["D", "ANN"] # Докстринги и типы не фиксим авто

# Игнорируемые правила
ignore = [
  "D107", # Missing docstring in __init__
  "D203", # 1 blank line required before class docstring
  "D213", # Multi-line docstring summary should start at the second line
  "ANN101", # Missing type annotation for self in method
  "D100", # Missing docstring in public module (иногда мешает)
  "D104", # Missing docstring in public package
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.flake8-annotations]
allow-star-arg-any = false
mypy-init-return = false
suppress-none-returning = false

[tool.ruff.lint.isort]
force-single-line = false
force-sort-within-sections = true
lines-after-imports = 2
